syntax = "proto3";
option java_multiple_files = true;

package proto.models;

import "models/rol.proto";

message Usuario {
	int64 idUsuario = 1;
	string nombreUsuario = 2;
	string nombre = 3;
	string apellido = 4;
	string telefono = 5;
	string clave = 6;
	string email = 7;
	bool activo = 8;
	Rol rol = 9;
}